k8s-manifest/base/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsu-devops-demo-app
  namespace: dev1
  labels:
    app: devsu-devops-demo
    run: devsu-devops-demo-app
spec:
  selector:
    matchLabels:
      app: devsu-devops-demo
      run: devsu-devops-demo-app
  template:
    metadata:
      labels:
        app: devsu-devops-demo
        run: devsu-devops-demo-app
    spec:
      containers:
      - name: devsu-devops-demo-app
        image: elvismjorgen/devsu-demo:latest
        ports:
        - containerPort: 8000
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: "/api/users/"
            port: 8000
            scheme: HTTP
        resources:
          limits:
            cpu: 200m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 200Mi
