k8s-manifest/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: devsu-devops-demo-svc
  namespace: dev1
  annotations:
      service.beta.kubernetes.io/azure-load-balancer-internal: "false" # Ensure this is false or remove it for an external IP
spec:
  type: LoadBalancer
  selector:
    run: devsu-devops-demo-app
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8000
